--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,33 @@
-baseURL = 'http://hugo-quickstart-template.netlify.com'
-languageCode = 'en-us'
-title = 'Netlify + Hugo Quickstart'
-theme = 'netlify-basic'
+baseURL = "https://mynewhugosite.com"
+title = "زاهي"
+theme = "zahi"
+languageCode = "ar"
+defaultContentLanguage = "ar"
+
+[taxonomies]
+tag = "tags"
+
+[menu]
+[[menu.main]]
+identifier = "الرئيسية"
+name = "الرئيسية"
+url = "/"
+weight = 10
+
+
+[[menu.main]]
+identifier = "المقالات"
+name = "المدونه"
+url = "/posts"
+weight = 10
+
+
+[params]
+github = "https://www.github.com/mohamedelhefni"
+mail = "mailto:mohamed.elhefni@outlook.com"
+site = "https://hefni101.netlify.app/"
+
+
+[services]
+[services.disqus]
+shortname = 'foobar'
