--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-baseURL = "https://mynewhugosite.com"
-title = "زاهي"
+baseURL = "https://yacin.org/"
+title = "ياسين"
 theme = "zahi"
 languageCode = "ar"
 defaultContentLanguage = "ar"
@@ -23,9 +23,9 @@ weight = 10
 
 
 [params]
-github = "https://www.github.com/mohamedelhefni"
-mail = "mailto:mohamed.elhefni@outlook.com"
-site = "https://hefni101.netlify.app/"
+github = "https://www.github.com/"
+mail = "mailto:ben.yacin@gmail.com"
+site = "https://yacin.org/"
 
 
 [services]
